--- a/Presentation/ProductAuthApi.Api/appsettings.json
+++ b/Presentation/ProductAuthApi.Api/appsettings.json
@@ -1,9 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "PostgreSqlConnection": "Server=localhost;Port=5432;Database=ProductAuthDb;Username=postgres;Password=semsam123"
+    },
+    "Jwt": {
+        "Key": "ThisIsA32ByteSuperSecureSecretKey!!",
+        "Issuer": "denemeApi",
+        "Audience": "denemeApiUsers",
+        "ExpireMinutes": 1
     }
-  },
-  "AllowedHosts": "*"
 }
