feat: Added Redis integration and updated ProductService with caching

--- a/Presentation/ProductAuthApi.Api/appsettings.json
+++ b/Presentation/ProductAuthApi.Api/appsettings.json
@@ -14,5 +14,9 @@
         "Issuer": "denemeApi",
         "Audience": "denemeApiUsers",
         "ExpireMinutes": 1
+    },
+    "Redis": {
+        "Configuration": "localhost:6379",
+        "InstanceName": "ProductAuthApi_"
     }
 }
